--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,8 +5,16 @@
   background-color: #676767;
 }
 
-.bg-color-three-reasons{
-    background-color: #fff;
+.bg-color-three-reasons {
+  background-color: #fff;
+}
+
+.bg-color-personal-info {
+  background-color: #f4f4f4;
+}
+
+.bg-color-work-history{
+  background-color: #92541d;
 }
 
 .ui-menu-color-home {
@@ -49,20 +57,21 @@ h4 {
 }
 
 .row-table {
-    display: table;
+  display: table;
 }
 
-.section-column{
-    display: table-cell;
-    padding: 0 30px 30px;
-    float:none;
+.section-column {
+  display: table-cell;
+  padding: 0 30px 30px;
+  float: none;
 }
 
-.secton-heading{
-    font-family: "Exo", sans-serif;
-    font-weight: 300;
-    margin-top: 25px;
-    margin-bottom:40px;
+.history-heading,
+.section-heading {
+  font-family: "Exo", sans-serif;
+  font-weight: 300;
+  margin-top: 25px;
+  margin-bottom: 40px;
 }
 
 /* ----------------------------------------------Heading */
@@ -76,14 +85,14 @@ header {
 }
 
 .logo {
-  background: url("../images/rosie.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 360px;
-  transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -webkit-transition: all 0.5s ease-in-out;
+    background: url("../images/rosie.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 360px;
+    transition: all .5s ease-in-out;
+    -moz-transition: all .5s ease-in-out;
+    -webkit-transition: all .5s ease-in-out;
 }
 
 .name {
@@ -203,10 +212,130 @@ footer {
 }
 
 .social-links li a i:hover {
-    background: #e84610;
+  background: #e84610;
 }
 
-#footer-details{
-    padding:20px;
+#footer-details {
+  padding: 20px;
 }
 
+/* ----------------------------------------------Three Reasons */
+
+.three-reasons-icon {
+  font-size: 26px;
+  color: #e67e22;
+}
+
+.three-reasons-heading {
+  margin-bottom: 15px;
+}
+
+
+/* ----------------------------------------------Personal Info */
+
+.personal-info-item {
+    margin-bottom: 20px;  /* creates vertical space between each item*/
+    display: block; /* start and ends with a new line and ocuppies the entireity of the space */
+    clear: both;             /* no items can appear either side in case we are using floats */
+
+}
+
+.personal-info-item .key,
+.personal-info-item .value {
+    padding-right:8px;
+    display : inline-block;   /* this allows two divs side by side */
+}
+
+.personal-info-item .key p,
+.personal-info-item .value p{
+    margin:0;
+}
+
+.personal-info-item .key{
+    width:30%;
+    margin-right: 21px;
+    padding-top: 2px;
+    vertical-align: top;
+}
+
+.personal-info-item .key p{
+    font-weight: 700;
+}
+
+.personal-info-item .value {
+    position: relative;
+    width: 60%;
+}
+
+
+/* ----------------------------------------------Skills */
+
+.progress {
+    position: relative;
+    height: 25px;
+    margin-bottom: 4px;
+
+}
+
+.progress-type{
+    position:absolute;
+    left:0px;
+    font-weight: 400;
+    padding: 3px 30px 2px 10px;
+    color: #fafafa;
+    background-color: rgba(25,25,25,.02 )
+}
+
+.progress-section{
+    margin: 40px 20px;
+}
+
+/* ----------------------------------------------Work History */
+
+
+.history-heading{
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
+.timeline-item{
+    padding: 4em 2em 0em 2em;
+    position: relative;
+    color: #fafafa;
+    border-left: 1px solid;
+}
+
+.timeline-item p {
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:before {
+    content: attr(data-dates);
+    position:absolute;
+    left: 2.5em;
+    top: 3em;
+    display: block;
+    font-family: "Exo" , sans-serif;
+    font-weight: 500;
+    font-size: 0.8em;
+    padding: 0;
+    margin: 0;
+}
+
+.timeline-item:after{
+    width: 12px;
+    height: 12px;
+    display: block;
+    top: 2.4em;
+    position: absolute;
+    left: -6px;
+    border-radius: 12px;
+    content: '';
+    background: #fafafa;
+
+}
+
+.history-items{
+    margin-bottom: 30px;
+}
